<?xml version="1.0"?>
<package format="2">
  <name>gs_core</name>
  <version>2.0.4</version>
  <description>The gs_core package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
